<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_pickuplist"
            android:icon="@drawable/ic_pickup"
            android:title="@string/pickuplist"
            app:actionLayout="@layout/menu_counter"/>

        <item
            android:id="@+id/nav_createwaybill"
            android:icon="@drawable/ic_create_waybill"
            android:title="@string/createwaybill"
            app:actionLayout="@layout/menu_counter"/>



        <item
            android:id="@+id/nav_checkpickuplist"
            android:icon="@drawable/ic_checklist"
            android:iconTint="@android:color/holo_red_dark"
            android:title="@string/checkpickuplist"/>

        <item
            android:id="@+id/nav_waybill"
            android:icon="@drawable/ic_waybill"

            android:title="@string/deliverysheet"/>
        <item
            android:id="@+id/nav_tracking"
            android:icon="@drawable/ic_tracking"
            android:title="@string/deliverycheckpoint"/>

        <item
            android:id="@+id/check_update"
            android:title="Check Update"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>
