<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <app.dinus.com.loadingdrawable.LoadingView
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:loading_renderer="GearLoadingRenderer" />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/row_border">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sr"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dispatch_order_number"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waybill_code"
                android:padding="5dp"/>

        </TableRow>

        <!--<TableRow>
            <TextView
                android:id="@+id/txtSr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/txtPickupcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/txtWBCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>

        </TableRow>-->

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>